panel/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --info: 204 94% 94%;
    --info-foreground: 199 89% 48%;

    --success: 149 80% 90%;
    --success-foreground: 160 84% 39%;

    --warning: 48 96% 89%;
    --warning-foreground: 25 95% 53%;

    --error: 0 93% 94%;
    --error-foreground: 0 84% 60%;

    --ring: 240 5.9% 10%;

    --radius: 0.5rem;
  }

  .dark,
  [data-kb-theme="dark"] {
    --background: 210 16.67% 9.41%;
    --foreground: 208.97 70.73% 91.96%;

    --muted: 212.31 14.94% 17.06%;
    --muted-foreground: 211.3 14.11% 68.04%;

    --accent: 216.92 11.71% 21.76%;
    --accent-foreground: var(--foreground);

    --popover: var(--secondary);
    --popover-foreground: var(--foreground);

    --border: 214.29 9.72% 28.24%;
    --input: 214.29 9.72% 28.24%;

    --card: 212.73 18.03% 11.96%;
    --card-foreground: var(--foreground);

    --primary: 216 46.3% 21.18%;
    --primary-foreground: 214.14 100% 54.51%;

    --secondary: 212.73 15.49% 13.92%;
    --secondary-foreground: var(--foreground);

    --destructive: 336.32 36.54% 20.39%;
    --destructive-foreground: 340.67 71.29% 40.98%;

    --info: 205.26 25.33% 14.71%;
    --info-foreground: 187.06 100% 50%;

    --success: 162 26.32% 14.9%;
    --success-foreground: 145.37 77.09% 44.51%;

    --warning: 332 100% 50%;
    --warning-foreground: 37.21 91.23% 55.29%;

    --error: 318.75 20.51% 15.29%;
    --error-foreground: 339.2 90.36% 51.18%;

    --ring: var(--primary-foreground);

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings:
      "rlig" 1,
      "calt" 1;
  }
}

@media (max-width: 640px) {
  .container {
    @apply px-4;
  }
}

